加固: QQ凭据加密/熔断/WS重连竞态/Pipeline超时与异常韧性/LLM瞬态重试/有界出站队列/泄漏Map清理/死代码清理
- P0: QQ clientSecret 落库加密(CredentialCipher, AES-256-GCM, enc:前缀兼容旧明文), upsertBot加密/getBotRow解密
- P1: QQ API 熔断器真正生效(半开探针+QqApiCircuitOpenException 503); Pipeline 整体超时(60s可配); LLM 主对话瞬态重试(429/5xx/超时, 2次退避); 出站执行器有界队列+CallerRuns兜底; 前端 SSE onopen/onerror状态徽标+轮询失败提示
- P2: WS 优雅关闭(awaitTermination)+重连竞态守卫(doConnect/onOpen/onText 检查 running); Stage异常不中断整链+stageErrorCount; RateLimitStage/LlmChatGuard 泄漏Map惰性清理; 插件卸载即清 copy 副本; 删 sendResume 死代码; 401重试成功重置熔断; llm.ts 未接线API加注释
- 验证: xuanji-starter -am compile 与 vite build 均通过